Fixed text alignment in the Header

--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-end;
+    justify-items: baseline;
     align-items: center;
     background-color: white;
     width: 100%;
@@ -22,6 +23,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    align-items: flex-end;
 }
 
 #comoFunciona{
